Fixed bug #33212 ([GCC 4]: 'zend_error_noreturn' aliased to external symbol 'zend_error'). The fix is not tested on Solaris and DARWIN!

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@188283 c90b9560-bf6c-de11-be94-00142212c4b1